# Privacy-Aware-Corpus-Intelligence-Pipeline

./: .gitignore  README.md  pyproject.toml
docs/: advanced_non_llm_validation.md  architecture.md
src/corpus_privacy_intelligence/: __init__.py  advanced_detectors.py  advanced_validation.py  classifier.py  cli.py  models.py  ollama_validation.py  pii.py  pipeline.py  reader.py  reports.py  taxonomy.py  text.py  validation.py  validators.py
tests/: test_classifier.py
