[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "corpus-privacy-intelligence"
version = "0.1.0"
description = "Privacy-aware classification and topic mining for large text corpora"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Surya Vaddhiparthy" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
nlp = [
  "presidio-analyzer>=2.2.355",
  "spacy>=3.7",
  "scikit-learn>=1.4",
]
embeddings = ["sentence-transformers>=3.0"]
all = [
  "presidio-analyzer>=2.2.355",
  "spacy>=3.7",
  "scikit-learn>=1.4",
  "sentence-transformers>=3.0",
]

[project.scripts]
corpus-privacy-intelligence = "corpus_privacy_intelligence.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
